environment/diycc/step026/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> teigi
Rule 1     teigi -> kansuuteigi
Rule 2     teigi -> teigi kansuuteigi
Rule 3     kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE
Rule 4     kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE
Rule 5     bunlist -> bun
Rule 6     bunlist -> bunlist bun
Rule 7     bun -> RETURN expression SEMI
Rule 8     bun -> TYPE SYMBOL SEMI
Rule 9     bun -> SYMBOL EQUALS expression SEMI
Rule 10    bun -> expression SEMI
Rule 11    expression -> NUMBER
Rule 12    expression -> expression OPTASU expression
Rule 13    expression -> expression OPHIKU expression
Rule 14    expression -> expression OPKAKE expression
Rule 15    expression -> SYMBOL
Rule 16    expression -> SYMBOL KAKKO KOKKA
Rule 17    expression -> SYMBOL KAKKO expression KOKKA

Terminals, with rules where they appear

EQUALS               : 9
KAKKO                : 3 4 16 17
KOKKA                : 3 4 16 17
LBRACE               : 3 4
NUMBER               : 11
OPHIKU               : 13
OPKAKE               : 14
OPTASU               : 12
RBRACE               : 3 4
RETURN               : 7
SEMI                 : 7 8 9 10
SYMBOL               : 3 4 4 8 9 15 16 17
TYPE                 : 3 4 4 8
error                : 

Nonterminals, with rules where they appear

bun                  : 5 6
bunlist              : 3 4 6
expression           : 7 9 10 12 12 13 13 14 14 17
kansuuteigi          : 1 2
teigi                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . teigi
    (1) teigi -> . kansuuteigi
    (2) teigi -> . teigi kansuuteigi
    (3) kansuuteigi -> . TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE
    (4) kansuuteigi -> . TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE

    TYPE            shift and go to state 3

    teigi                          shift and go to state 1
    kansuuteigi                    shift and go to state 2

state 1

    (0) S' -> teigi .
    (2) teigi -> teigi . kansuuteigi
    (3) kansuuteigi -> . TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE
    (4) kansuuteigi -> . TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE

    TYPE            shift and go to state 3

    kansuuteigi                    shift and go to state 4

state 2

    (1) teigi -> kansuuteigi .

    TYPE            reduce using rule 1 (teigi -> kansuuteigi .)
    $end            reduce using rule 1 (teigi -> kansuuteigi .)


state 3

    (3) kansuuteigi -> TYPE . SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE
    (4) kansuuteigi -> TYPE . SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE

    SYMBOL          shift and go to state 5


state 4

    (2) teigi -> teigi kansuuteigi .

    TYPE            reduce using rule 2 (teigi -> teigi kansuuteigi .)
    $end            reduce using rule 2 (teigi -> teigi kansuuteigi .)


state 5

    (3) kansuuteigi -> TYPE SYMBOL . KAKKO KOKKA LBRACE bunlist RBRACE
    (4) kansuuteigi -> TYPE SYMBOL . KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE

    KAKKO           shift and go to state 6


state 6

    (3) kansuuteigi -> TYPE SYMBOL KAKKO . KOKKA LBRACE bunlist RBRACE
    (4) kansuuteigi -> TYPE SYMBOL KAKKO . TYPE SYMBOL KOKKA LBRACE bunlist RBRACE

    KOKKA           shift and go to state 8
    TYPE            shift and go to state 7


state 7

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE . SYMBOL KOKKA LBRACE bunlist RBRACE

    SYMBOL          shift and go to state 9


state 8

    (3) kansuuteigi -> TYPE SYMBOL KAKKO KOKKA . LBRACE bunlist RBRACE

    LBRACE          shift and go to state 10


state 9

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL . KOKKA LBRACE bunlist RBRACE

    KOKKA           shift and go to state 11


state 10

    (3) kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE . bunlist RBRACE
    (5) bunlist -> . bun
    (6) bunlist -> . bunlist bun
    (7) bun -> . RETURN expression SEMI
    (8) bun -> . TYPE SYMBOL SEMI
    (9) bun -> . SYMBOL EQUALS expression SEMI
    (10) bun -> . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    RETURN          shift and go to state 16
    TYPE            shift and go to state 12
    SYMBOL          shift and go to state 13
    NUMBER          shift and go to state 18

    bunlist                        shift and go to state 14
    bun                            shift and go to state 15
    expression                     shift and go to state 17

state 11

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA . LBRACE bunlist RBRACE

    LBRACE          shift and go to state 19


state 12

    (8) bun -> TYPE . SYMBOL SEMI

    SYMBOL          shift and go to state 20


state 13

    (9) bun -> SYMBOL . EQUALS expression SEMI
    (15) expression -> SYMBOL .
    (16) expression -> SYMBOL . KAKKO KOKKA
    (17) expression -> SYMBOL . KAKKO expression KOKKA

    EQUALS          shift and go to state 21
    SEMI            reduce using rule 15 (expression -> SYMBOL .)
    OPTASU          reduce using rule 15 (expression -> SYMBOL .)
    OPHIKU          reduce using rule 15 (expression -> SYMBOL .)
    OPKAKE          reduce using rule 15 (expression -> SYMBOL .)
    KAKKO           shift and go to state 22


state 14

    (3) kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE bunlist . RBRACE
    (6) bunlist -> bunlist . bun
    (7) bun -> . RETURN expression SEMI
    (8) bun -> . TYPE SYMBOL SEMI
    (9) bun -> . SYMBOL EQUALS expression SEMI
    (10) bun -> . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    RBRACE          shift and go to state 23
    RETURN          shift and go to state 16
    TYPE            shift and go to state 12
    SYMBOL          shift and go to state 13
    NUMBER          shift and go to state 18

    bun                            shift and go to state 24
    expression                     shift and go to state 17

state 15

    (5) bunlist -> bun .

    RBRACE          reduce using rule 5 (bunlist -> bun .)
    RETURN          reduce using rule 5 (bunlist -> bun .)
    TYPE            reduce using rule 5 (bunlist -> bun .)
    SYMBOL          reduce using rule 5 (bunlist -> bun .)
    NUMBER          reduce using rule 5 (bunlist -> bun .)


state 16

    (7) bun -> RETURN . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 25

state 17

    (10) bun -> expression . SEMI
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            shift and go to state 27
    OPTASU          shift and go to state 28
    OPHIKU          shift and go to state 29
    OPKAKE          shift and go to state 30


state 18

    (11) expression -> NUMBER .

    SEMI            reduce using rule 11 (expression -> NUMBER .)
    OPTASU          reduce using rule 11 (expression -> NUMBER .)
    OPHIKU          reduce using rule 11 (expression -> NUMBER .)
    OPKAKE          reduce using rule 11 (expression -> NUMBER .)
    KOKKA           reduce using rule 11 (expression -> NUMBER .)


state 19

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE . bunlist RBRACE
    (5) bunlist -> . bun
    (6) bunlist -> . bunlist bun
    (7) bun -> . RETURN expression SEMI
    (8) bun -> . TYPE SYMBOL SEMI
    (9) bun -> . SYMBOL EQUALS expression SEMI
    (10) bun -> . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    RETURN          shift and go to state 16
    TYPE            shift and go to state 12
    SYMBOL          shift and go to state 13
    NUMBER          shift and go to state 18

    bunlist                        shift and go to state 31
    bun                            shift and go to state 15
    expression                     shift and go to state 17

state 20

    (8) bun -> TYPE SYMBOL . SEMI

    SEMI            shift and go to state 32


state 21

    (9) bun -> SYMBOL EQUALS . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 33

state 22

    (16) expression -> SYMBOL KAKKO . KOKKA
    (17) expression -> SYMBOL KAKKO . expression KOKKA
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    KOKKA           shift and go to state 34
    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 35

state 23

    (3) kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE .

    TYPE            reduce using rule 3 (kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE .)
    $end            reduce using rule 3 (kansuuteigi -> TYPE SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE .)


state 24

    (6) bunlist -> bunlist bun .

    RBRACE          reduce using rule 6 (bunlist -> bunlist bun .)
    RETURN          reduce using rule 6 (bunlist -> bunlist bun .)
    TYPE            reduce using rule 6 (bunlist -> bunlist bun .)
    SYMBOL          reduce using rule 6 (bunlist -> bunlist bun .)
    NUMBER          reduce using rule 6 (bunlist -> bunlist bun .)


state 25

    (7) bun -> RETURN expression . SEMI
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            shift and go to state 36
    OPTASU          shift and go to state 28
    OPHIKU          shift and go to state 29
    OPKAKE          shift and go to state 30


state 26

    (15) expression -> SYMBOL .
    (16) expression -> SYMBOL . KAKKO KOKKA
    (17) expression -> SYMBOL . KAKKO expression KOKKA

    SEMI            reduce using rule 15 (expression -> SYMBOL .)
    OPTASU          reduce using rule 15 (expression -> SYMBOL .)
    OPHIKU          reduce using rule 15 (expression -> SYMBOL .)
    OPKAKE          reduce using rule 15 (expression -> SYMBOL .)
    KOKKA           reduce using rule 15 (expression -> SYMBOL .)
    KAKKO           shift and go to state 22


state 27

    (10) bun -> expression SEMI .

    RBRACE          reduce using rule 10 (bun -> expression SEMI .)
    RETURN          reduce using rule 10 (bun -> expression SEMI .)
    TYPE            reduce using rule 10 (bun -> expression SEMI .)
    SYMBOL          reduce using rule 10 (bun -> expression SEMI .)
    NUMBER          reduce using rule 10 (bun -> expression SEMI .)


state 28

    (12) expression -> expression OPTASU . expression
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 37

state 29

    (13) expression -> expression OPHIKU . expression
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 38

state 30

    (14) expression -> expression OPKAKE . expression
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    NUMBER          shift and go to state 18
    SYMBOL          shift and go to state 26

    expression                     shift and go to state 39

state 31

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist . RBRACE
    (6) bunlist -> bunlist . bun
    (7) bun -> . RETURN expression SEMI
    (8) bun -> . TYPE SYMBOL SEMI
    (9) bun -> . SYMBOL EQUALS expression SEMI
    (10) bun -> . expression SEMI
    (11) expression -> . NUMBER
    (12) expression -> . expression OPTASU expression
    (13) expression -> . expression OPHIKU expression
    (14) expression -> . expression OPKAKE expression
    (15) expression -> . SYMBOL
    (16) expression -> . SYMBOL KAKKO KOKKA
    (17) expression -> . SYMBOL KAKKO expression KOKKA

    RBRACE          shift and go to state 40
    RETURN          shift and go to state 16
    TYPE            shift and go to state 12
    SYMBOL          shift and go to state 13
    NUMBER          shift and go to state 18

    bun                            shift and go to state 24
    expression                     shift and go to state 17

state 32

    (8) bun -> TYPE SYMBOL SEMI .

    RBRACE          reduce using rule 8 (bun -> TYPE SYMBOL SEMI .)
    RETURN          reduce using rule 8 (bun -> TYPE SYMBOL SEMI .)
    TYPE            reduce using rule 8 (bun -> TYPE SYMBOL SEMI .)
    SYMBOL          reduce using rule 8 (bun -> TYPE SYMBOL SEMI .)
    NUMBER          reduce using rule 8 (bun -> TYPE SYMBOL SEMI .)


state 33

    (9) bun -> SYMBOL EQUALS expression . SEMI
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            shift and go to state 41
    OPTASU          shift and go to state 28
    OPHIKU          shift and go to state 29
    OPKAKE          shift and go to state 30


state 34

    (16) expression -> SYMBOL KAKKO KOKKA .

    SEMI            reduce using rule 16 (expression -> SYMBOL KAKKO KOKKA .)
    OPTASU          reduce using rule 16 (expression -> SYMBOL KAKKO KOKKA .)
    OPHIKU          reduce using rule 16 (expression -> SYMBOL KAKKO KOKKA .)
    OPKAKE          reduce using rule 16 (expression -> SYMBOL KAKKO KOKKA .)
    KOKKA           reduce using rule 16 (expression -> SYMBOL KAKKO KOKKA .)


state 35

    (17) expression -> SYMBOL KAKKO expression . KOKKA
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    KOKKA           shift and go to state 42
    OPTASU          shift and go to state 28
    OPHIKU          shift and go to state 29
    OPKAKE          shift and go to state 30


state 36

    (7) bun -> RETURN expression SEMI .

    RBRACE          reduce using rule 7 (bun -> RETURN expression SEMI .)
    RETURN          reduce using rule 7 (bun -> RETURN expression SEMI .)
    TYPE            reduce using rule 7 (bun -> RETURN expression SEMI .)
    SYMBOL          reduce using rule 7 (bun -> RETURN expression SEMI .)
    NUMBER          reduce using rule 7 (bun -> RETURN expression SEMI .)


state 37

    (12) expression -> expression OPTASU expression .
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 12 (expression -> expression OPTASU expression .)
    OPTASU          reduce using rule 12 (expression -> expression OPTASU expression .)
    OPHIKU          reduce using rule 12 (expression -> expression OPTASU expression .)
    KOKKA           reduce using rule 12 (expression -> expression OPTASU expression .)
    OPKAKE          shift and go to state 30

  ! OPKAKE          [ reduce using rule 12 (expression -> expression OPTASU expression .) ]
  ! OPTASU          [ shift and go to state 28 ]
  ! OPHIKU          [ shift and go to state 29 ]


state 38

    (13) expression -> expression OPHIKU expression .
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 13 (expression -> expression OPHIKU expression .)
    OPTASU          reduce using rule 13 (expression -> expression OPHIKU expression .)
    OPHIKU          reduce using rule 13 (expression -> expression OPHIKU expression .)
    KOKKA           reduce using rule 13 (expression -> expression OPHIKU expression .)
    OPKAKE          shift and go to state 30

  ! OPKAKE          [ reduce using rule 13 (expression -> expression OPHIKU expression .) ]
  ! OPTASU          [ shift and go to state 28 ]
  ! OPHIKU          [ shift and go to state 29 ]


state 39

    (14) expression -> expression OPKAKE expression .
    (12) expression -> expression . OPTASU expression
    (13) expression -> expression . OPHIKU expression
    (14) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 14 (expression -> expression OPKAKE expression .)
    OPTASU          reduce using rule 14 (expression -> expression OPKAKE expression .)
    OPHIKU          reduce using rule 14 (expression -> expression OPKAKE expression .)
    OPKAKE          reduce using rule 14 (expression -> expression OPKAKE expression .)
    KOKKA           reduce using rule 14 (expression -> expression OPKAKE expression .)

  ! OPTASU          [ shift and go to state 28 ]
  ! OPHIKU          [ shift and go to state 29 ]
  ! OPKAKE          [ shift and go to state 30 ]


state 40

    (4) kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE .

    TYPE            reduce using rule 4 (kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE .)
    $end            reduce using rule 4 (kansuuteigi -> TYPE SYMBOL KAKKO TYPE SYMBOL KOKKA LBRACE bunlist RBRACE .)


state 41

    (9) bun -> SYMBOL EQUALS expression SEMI .

    RBRACE          reduce using rule 9 (bun -> SYMBOL EQUALS expression SEMI .)
    RETURN          reduce using rule 9 (bun -> SYMBOL EQUALS expression SEMI .)
    TYPE            reduce using rule 9 (bun -> SYMBOL EQUALS expression SEMI .)
    SYMBOL          reduce using rule 9 (bun -> SYMBOL EQUALS expression SEMI .)
    NUMBER          reduce using rule 9 (bun -> SYMBOL EQUALS expression SEMI .)


state 42

    (17) expression -> SYMBOL KAKKO expression KOKKA .

    SEMI            reduce using rule 17 (expression -> SYMBOL KAKKO expression KOKKA .)
    OPTASU          reduce using rule 17 (expression -> SYMBOL KAKKO expression KOKKA .)
    OPHIKU          reduce using rule 17 (expression -> SYMBOL KAKKO expression KOKKA .)
    OPKAKE          reduce using rule 17 (expression -> SYMBOL KAKKO expression KOKKA .)
    KOKKA           reduce using rule 17 (expression -> SYMBOL KAKKO expression KOKKA .)

